Реализация выборки сервисов

--- a/Hakaton.Data/Hakaton.Data.csproj
+++ b/Hakaton.Data/Hakaton.Data.csproj
@@ -5,11 +5,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Migrations\" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.2.4" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="2.2.4" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.2.4" />
+    <ProjectReference Include="..\Hakaton.Domain.Models\Hakaton.Domain.Models.csproj" />
   </ItemGroup>
 
   <ItemGroup>
