--- a/Hakaton.Domain/Hakaton.Domain.csproj
+++ b/Hakaton.Domain/Hakaton.Domain.csproj
@@ -9,4 +9,8 @@
     <Folder Include="Services\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Hakaton.Domain.Models\Hakaton.Domain.Models.csproj" />
+  </ItemGroup>
+
 </Project>
