--- a/Hakaton.Domain/Hakaton.Domain.csproj
+++ b/Hakaton.Domain/Hakaton.Domain.csproj
@@ -10,6 +10,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Hakaton.Data\Hakaton.Data.csproj" />
     <ProjectReference Include="..\Hakaton.Domain.Models\Hakaton.Domain.Models.csproj" />
   </ItemGroup>
 
