--- a/Hakaton/Hakaton.App.csproj
+++ b/Hakaton/Hakaton.App.csproj
@@ -19,6 +19,8 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Hakaton.Data\Hakaton.Data.csproj" />
+    <ProjectReference Include="..\Hakaton.Domain.Models\Hakaton.Domain.Models.csproj" />
+    <ProjectReference Include="..\Hakaton.Domain\Hakaton.Domain.csproj" />
   </ItemGroup>
 
 </Project>
