--- a/Hakaton/appsettings.json
+++ b/Hakaton/appsettings.json
@@ -6,6 +6,6 @@
   },
   "AllowedHosts": "*",
   "Connection": {
-    "ConnectionString": "Server=database;UserId=postgres;Port=5432;Database=Hakaton"
+    "ConnectionString": "Server=localhost;UserId=postgres;Password=postgres;Port=5432;Database=Hakaton"
   } 
 }
