--- a/Hakaton/Hakaton.App.csproj
+++ b/Hakaton/Hakaton.App.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DocumentationFile>C:\Users\user\source\repos\HackatonAstral\Hakaton\Hakaton.App.xml</DocumentationFile>
+    <DocumentationFile>..\HackatonAstral\Hakaton\Hakaton.App.xml</DocumentationFile>
     <PlatformTarget>AnyCPU</PlatformTarget>
   </PropertyGroup>
 
